--- a/index.html
+++ b/index.html
@@ -960,21 +960,21 @@
 				<div class="contact_inner">
 					<div class="left wow fadeInLeft" data-wow-duration="1s">
 						<div class="text">
-							<p>Please fill out the form on this section to contact with me. Or call between 9:00 a.m. and 8:00 p.m. ET, Monday through Friday</p>
+							<p>Please fill out the form on this section to contact with me. Or call between 9:00 a.m. and 8:00 p.m. (GMT+5:30), Monday through Friday</p>
 						</div>
 						<ul>
 							<li>
 								<div class="list_inner">
 									<img class="svg" src="img/svg/call.svg" alt="" />
 									<span>Call me</span>
-									<h3>+1234 5678 9000</h3>
+									<h3>+94 71 2891848</h3>
 								</div>
 							</li>
 							<li>
 								<div class="list_inner">
 									<img class="svg" src="img/svg/message.svg" alt="" />
 									<span>Email</span>
-									<h3><a class="line_anim" href="mailto:hello@aali.com">hello@aali.com</a></h3>
+									<h3><a class="line_anim" href="mailto:hello@aali.com">tashendinal.developer@gmail.com</a></h3>
 								</div>
 							</li>
 						</ul>
@@ -1017,20 +1017,20 @@
 				<div class="copyright_inner">
 					<div class="top">
 						<div class="logo">
-							<img src="img/logo/logo.png" alt="" />
+							<img src="img/logo/2.png" alt="" />
 						</div>
 						<div class="social">
 							<span>Connect</span>
 							<ul>
-								<li><a href="#"><i class="icon-facebook-1"></i></a></li>
+								<li><a href="https://www.facebook.com/tashen.tashen.731"><i class="icon-facebook-1"></i></a></li>
 								<li><a href="#"><i class="icon-twitter-1"></i></a></li>
-								<li><a href="#"><i class="icon-instagram-3"></i></a></li>
+								<li><a href="https://www.instagram.com/tashendinal/"><i class="icon-instagram-3"></i></a></li>
 							</ul>
 						</div>
 					</div>
 					<div class="bottom">
 						<div class="left">
-							<p>Designed  by Tashen Dinal <a class="line_anim" href="https://www.facebook.com/tashen.tashen.731" target="_blank">Marketify</a> &copy; 2021</p>
+							<p>Designed  by <a class="line_anim" href="https://www.facebook.com/tashen.tashen.731" target="_blank">Tashen Dinal</a> &copy; 2022</p>
 						</div>
 						<div class="right">
 							<ul>
